# chainette

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ELEGANCE_PLAN.md  ENGINE_PLAN.md  README.md  RUNNER_PLAN.md  inputs.jsonl  inputs2.jsonl  llm.txt  pyproject.toml  pytest.ini
_legacy_examples/: basic.py  clinical_extraction_translation_simple.py  clinical_insights_qa_openai.py  clinical_to_note.py  clinical_to_note.yml  complex_support_chain.py  engine_clinical_qa.yaml  ollama_qwen_test.py
_tmp_ollama_multi/: graph.json  metadata.json
_tmp_ollama_single/: metadata.json
_tmp_ollama_test/: metadata.json
_tmp_openai_test/: metadata.json
_tmp_parallel/: metadata.json
_tmp_run/: metadata.json
_tmp_run10/: graph.json  metadata.json
_tmp_run2/: metadata.json
_tmp_run4/: metadata.json
_tmp_run6/: metadata.json
_tmp_run7/: metadata.json
_tmp_run8/: metadata.json
chainette/: __init__.py  cli.py  dsl.py  yaml_loader.py
changelog/: CODE_CLEANUP_PLAN.md  DAG_UI_PLAN.md  ELEGANCE_PLAN.md  ENGINE_API_PLAN.md  ENGINE_DESIGN.md  ENGINE_PLAN.md  RUNNER_PLAN.md  llm.txt
examples/: basic.py  clinical_insights_qa.py  clinical_insights_qa.yml  clinical_insights_qa_openai.py  complex_support_chain.py  gemma_chain.yml  multi_doc_summary_eval.py  ollama_gemma_features.py  ollama_gemma_test.py  ollama_qwen_test.py  product_struct_extract.py
llm-changelogs/: ENGINE_UI_ENHANCEMENT.md
run_features/: metadata.json
run_features2/: metadata.json
run_gemma/: metadata.json
run_gemma2/: metadata.json
run_gemma3/: metadata.json
src/: index.html
tests/: test_broker_pool.py  test_chain_ollama_live.py  test_dsl.py  (+24 more)
(+136 files in other folders)
