[tool.poetry]
name = "chainette"
version = "0.1.0"
description = "Typed, lightweight LLM chaining with Pydantic IO and vLLM back‑ends"
authors = ["rian rian.touchent@inria.fr"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
vllm = {version = "^0.8.5.post1", optional = true}
requests = "^2.32"
pydantic = "^2.6"
datasets = "^2.19"
rich = "^13.7"
httpx = "^0.27"
psutil = "^5.9"
typer = {version = "^0.12", extras = ["all"]}
pyyaml = "^6.0"
Jinja2 = "^3.1.3"
numpy = "^1.26"
setuptools = "^80.3.1"
openai = "^1.78.1"
ollama = {version = "^0.1.7", optional = true}
pyfiglet = "^1.0.3"
transformers = "^4.52.4"
torch = "^2.3.1"

[tool.poetry.scripts]
chainette = "chainette.cli:app"

[tool.poetry.extras]
ollama = ["ollama", "torch"]
vllm = ["vllm"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
jsonschema = "^4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"